@@ -1,3 +1,7 @@
+2005-05-18  Albert Chu  <chu11@llnl.gov>
+
+	* Complete status listener.
+	
 2005-05-17  Albert Chu  <chu11@llnl.gov>
 
 	* Removed unused error codes.
